More iphone fixes. filters and text cutoffs
git-svn-id: file:///home/uqtdettr/workspace/mytardis-svn-mirror/trunk@74 174ef292-f9a9-40f3-a4db-b6760525a304

--- a/tardis_portal/site_media/mobile/css/style.css
+++ b/tardis_portal/site_media/mobile/css/style.css
@@ -72,3 +72,13 @@ a.buttoninline {
 .entry {
 	padding: 5px;
 }
+.transparent #leftnav a
+{
+	max-width: 30% !important;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;	
+}
+ul .pageitem {
+	width: 90%;
+}
